# ai-agent-researcher

./: .env.example  README.md  main.py  pyproject.toml  test_agente.py
ai agent reasearcher/: Search.bru  bruno.json
app/: config.py  main.py  schemas.py
app/agents/: research_agent.py
app/services/: classifier.py  scraper.py  search.py
app/tools/: classify_tool.py  scrape_tool.py  search_tool.py
